tests/NormalTests/paczka1/small_fuzzy/10292989.err
Error in line 1: 4wVJBf S218 13,9
Error in line 7: 4wVJBf A66 0,0
